# packages/backend/src/entities/seeds.ts
@@ -1,4 +1,5 @@
-import type { SeederConstructor } from 'typeorm-extension';
-import { UsersSeeder } from './Users/Users.seeder';
+import { SeederConstructor } from 'typeorm-extension';
+import { CategoriesSeeder } from './Categories/Categories.seeder';
+import { ProductsSeeder } from './Products/Products.seeder';
 
-export const seeds: SeederConstructor[] = [UsersSeeder];
+export const seeds: SeederConstructor[] = [CategoriesSeeder, ProductsSeeder];
